--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <div class="header-logos">
-            <img src="ieee-day-logo.jpg" alt="IEEE Day Logo" class="logo">
+            <img src="iee" alt="IEEE Day Logo" class="logo">
             </div>
         <h1>IEEE Day 2025 & IEEE Computer Society Inauguration</h1>
         <h2>Sir C.R. Reddy College of Engineering</h2>
@@ -111,5 +111,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
